Fix user panel appearing behind server warning

--- a/src/components/NavBar/HorizontalNavBar/NavMenu/styles.less
+++ b/src/components/NavBar/HorizontalNavBar/NavMenu/styles.less
@@ -19,6 +19,10 @@
     border-radius: var(--border-radius);
     background-color: var(--modal-background-color);
 
+    &.with-warning {
+        max-height: calc(100vh - var(--horizontal-nav-bar-size) - 6rem);
+    }
+
     .user-info-container {
         display: flex;
         padding: 1.5rem 1rem;
